<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.MainActivity">

    <TextView
        android:id="@+id/welcomingText"
        android:layout_width="381dp"
        android:layout_height="90dp"
        android:autoText="false"
        android:text="@string/welcome_player_to_piatnik_party_where_the_fun_begins"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.224" />

    <Button
        android:id="@+id/BtnPlayGame"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="20dp"
        android:text="Join Game"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomingText" />

    <Button
        android:id="@+id/BtnCreateGame"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="16dp"
        android:text="@string/create_game"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BtnPlayGame" />

    <Button
        android:id="@+id/BtnOptions"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="20dp"
        android:text="@string/options"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BtnCreateGame" />

    <Button
        android:id="@+id/BtnGameRules"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="20dp"
        android:text="@string/game_rules"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BtnOptions" />

    <Button
        android:id="@+id/btnShowTable"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="20dp"
        android:text="@string/show_table"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BtnGameRules"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>